Fix smooth scrolling on ios

--- a/less/bootstrap-theme/wrapper.less
+++ b/less/bootstrap-theme/wrapper.less
@@ -8,6 +8,8 @@ body,
     height: 100%;
     width: 100%;
     margin: 0;
+
+    -webkit-overflow-scrolling: touch;
 }
 
 .container-main {
